# ChatAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml  run_chat.py
docs/: ChatAgent操作手册.md  ChatAgent项目说明.md
frontend/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_41a8b22b275b9e0a_api_py.html  z_41a8b22b275b9e0a_context_py.html  z_41a8b22b275b9e0a_desktop_py.html  z_41a8b22b275b9e0a_graph_py.html  z_41a8b22b275b9e0a_persist_py.html  z_41a8b22b275b9e0a_rag_py.html  z_41a8b22b275b9e0a_store_py.html
src/agent/: api.py  context.py  desktop.py  graph.py  persist.py  rag.py  store.py
tests/: test_graph.py  test_persist.py  test_rag.py  test_store.py
